--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
        <div class="slidelist">
            <div class="slideimg">
                <h2> </h2>
-           <img src="images/slide/j3.JPG" alt="1">
+           <img src="j3.JPG" alt="1">
             </div>
            <div class="slideimg">
                <h2> </h2>
