--- a/index.html
+++ b/index.html
@@ -27,62 +27,62 @@
             </div>
            <div class="slideimg">
                <h2> </h2>
-           <img src="images/slide/j5.JPG" alt="2">
+           <img src="j5.JPG" alt="2">
            </div>
            <div class="slideimg">
                <h2> </h2>
-           <img src="images/slide/j6.JPG" alt="3">
+           <img src="j6.JPG" alt="3">
            </div>
            <div class="slideimg">
                <h2> </h2>
-           <img src="images/slide/j8.JPG" alt="4">
+           <img src="j8.JPG" alt="4">
            </div>
            <div class="slideimg">
                <h2> </h2>
-           <img src="images/slide/j9.JPG" alt="5">
+           <img src="j9.JPG" alt="5">
            </div>
            <div class="slideimg">
                <h2> </h2>
-           <img src="images/slide/j10.JPG" alt="6">
+           <img src="j10.JPG" alt="6">
            </div>
            <div class="slideimg">
                <h2> </h2>
-           <img src="images/slide/j11.JPG" alt="7">
+           <img src="j11.JPG" alt="7">
            </div>
            <div class="slideimg">
                <h2> </h2>
-           <img src="images/slide/j13.JPG" alt="8">
+           <img src="j13.JPG" alt="8">
            </div>
            <div class="slideimg">
-           <img src="images/slide/n1.JPG" alt="9">
+           <img src="n1.JPG" alt="9">
             </div>
            <div class="slideimg">
                <h2> </h2>
-           <img src="images/slide/n2.JPG" alt="10">
+           <img src="n2.JPG" alt="10">
            </div>
            <div class="slideimg">
                <h2> </h2>
-           <img src="images/slide/n6.JPG" alt="11">
+           <img src="n6.JPG" alt="11">
            </div>
            <div class="slideimg">
                <h2> </h2>
-           <img src="images/slide/n7.JPG" alt="12">
+           <img src="n7.JPG" alt="12">
            </div>
            <div class="slideimg">
                <h2> </h2>
-           <img src="images/slide/n8.JPG" alt="13">
+           <img src="n8.JPG" alt="13">
            </div>
            <div class="slideimg">
                <h2> </h2>
-           <img src="images/slide/n3.JPG" alt="14">
+           <img src="n3.JPG" alt="14">
            </div>
            <div class="slideimg">
                <h2> </h2>
-           <img src="images/slide/n10.JPG" alt="15">
+           <img src="n10.JPG" alt="15">
            </div>
            <div class="slideimg">
                <h2> </h2>
-           <img src="images/slide/n11.JPG" alt="16">
+           <img src="n11.JPG" alt="16">
        </div>
            </div>
            </section>
