--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <ul class="clearfix">
                         <li>
                             <a href="osaka.html" target="_blank" onfocus="this.blur()">
-                            <img src="images/osaka.jpg" alt="Summer x2 Osaka">
+                            <img src="osaka.jpg" alt="Summer x2 Osaka">
                             <span>Summer x2 Osaka</span>
                             </a>
                             <P>#08, 2018</P>
@@ -111,7 +111,7 @@
                     <ul class="clearfix">
                         <li>
                            <a href="tokyo.html" target="_blank" onfocus="this.blur()">
-                           <img src="images/tokyo1.JPG" alt="Hong kong">
+                           <img src="tokyo1.JPG" alt="Hong kong">
                            <span>TOKYO</span>
                            </a>
                            <P>#11, 2018</P>
@@ -124,7 +124,7 @@
                     <ul class="clearfix">
                         <li>
                             <a href="fukuoka.html" target="_blank" onfocus="this.blur()">
-                            <img src="images/fukuoka.JPG" alt="Umai Fukuoka">
+                            <img src="fukuoka.JPG" alt="Umai Fukuoka">
                             <span>Umai Fukuoka</span>
                             </a>
                             <P>#03, 2019</P>
@@ -137,7 +137,7 @@
                    <ul class="clearfix">
                         <li>
                         <a href="hong kong-macao.html" target="_blank" onfocus="this.blur()">
-                        <img src="images/hk.JPG" alt="Hong kong - Macao">
+                        <img src="hk.JPG" alt="Hong kong - Macao">
                         <span>Hong kong - Macao</span>
                         </a>
                         <P>#07, 2019</P>
@@ -150,7 +150,7 @@
                    <ul class="clearfix">
                         <li>
                         <a href="2019 tokyo.html" target="_blank" onfocus="this.blur()">
-                        <img src="images/tokyo2.JPG" alt="久しぶりの、東京">
+                        <img src="tokyo2.JPG" alt="久しぶりの、東京">
                         <span>久しぶりの、東京 。</span>
                         </a>
                         <P>#07, 2019</P>
@@ -163,7 +163,7 @@
                    <ul class="clearfix">
                         <li>
                         <a href="new york.html" target="_blank" onfocus="this.blur()">
-                        <img src="images/nyc.JPG" alt="New York">
+                        <img src="nyc.JPG" alt="New York">
                         <span>New yorrrk</span>
                         </a>
                         <P>#02, 2020</P>
@@ -176,7 +176,7 @@
                    <ul class="clearfix">
                         <li>
                         <a href="#" target="_blank" onfocus="this.blur()">
-                        <img src="images/what.png" alt="???">
+                        <img src="what.png" alt="???">
                         <span>Christmas in London</span>
                         </a>
                         <P>#12, 2022</P>
