--- a/osaka.html
+++ b/osaka.html
@@ -5,7 +5,7 @@
     <title>Summer x2 Osaka</title>
     
     <!-- style -->
-    <link rel="stylesheet" href="css/osaka.style.css">
+    <link rel="stylesheet" href="osaka.style.css">
 </head>
     
 <body>
