--- a/tokyo.html
+++ b/tokyo.html
@@ -5,7 +5,7 @@
     <title>TOKYO</title>
     
     <!-- style -->
-    <link rel="stylesheet" href="css/tokyo.style.css">
+    <link rel="stylesheet" href="tokyo.style.css">
 </head>
     
 <body>
