--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <ul class="clearfix">
                         <li>
                             <a href="fukuoka.html" target="_blank" onfocus="this.blur()">
-                            <img src="fukuoka.JPG" alt="Umai Fukuoka">
+                            <img src="fukuoka.jpg" alt="Umai Fukuoka">
                             <span>Umai Fukuoka</span>
                             </a>
                             <P>#03, 2019</P>
@@ -137,7 +137,7 @@
                    <ul class="clearfix">
                         <li>
                         <a href="hong kong-macao.html" target="_blank" onfocus="this.blur()">
-                        <img src="hk.JPG" alt="Hong kong - Macao">
+                        <img src="hk.jpg" alt="Hong kong - Macao">
                         <span>Hong kong - Macao</span>
                         </a>
                         <P>#07, 2019</P>
@@ -163,7 +163,7 @@
                    <ul class="clearfix">
                         <li>
                         <a href="new york.html" target="_blank" onfocus="this.blur()">
-                        <img src="nyc.JPG" alt="New York">
+                        <img src="nyc.jpg" alt="New York">
                         <span>New yorrrk</span>
                         </a>
                         <P>#02, 2020</P>
