--- a/osaka2.html
+++ b/osaka2.html
@@ -5,7 +5,7 @@
     <title>Summer x2 Osaka</title>
     
     <!-- style -->
-    <link rel="stylesheet" href="css/osaka2.style.css">
+    <link rel="stylesheet" href="osaka2.style.css">
 </head>
     
 <body>
