--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
        
             <section id="contents1">
                 <div class="banner">
-                    <h2>TRAVLE</h2>
+                    <h2>TRAVEL</h2>
                 </div>
                 <!-- //banner -->
            
