--- a/osaka.html
+++ b/osaka.html
@@ -32,7 +32,7 @@
         <div class="img">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-1.jpeg" alt="Summer x2 Osaka">
+            <img src="img-1.jpeg" alt="Summer x2 Osaka">
             <span>오사카에서의 첫 사진</span>
             </li>
             </ul>
