--- a/osaka.html
+++ b/osaka.html
@@ -40,7 +40,7 @@
         <div class="img1">
             <ul class="clearfix">
              <li>
-             <img src="images/osaka/img-2.jpeg" alt="Summer x2 Osaka">
+             <img src="img-2.jpeg" alt="Summer x2 Osaka">
              <span> </span>
              </li>
             </ul>
@@ -48,7 +48,7 @@
         <div class="img2">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-3.jpeg" alt="Summer x2 Osaka">
+            <img src="img-3.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
