--- a/osaka.html
+++ b/osaka.html
@@ -56,7 +56,7 @@
         <div class="img3">
             <ul class="clearfix">
              <li>
-             <img src="images/osaka/img-4.jpeg" alt="Summer x2 Osaka">
+             <img src="img-4.jpeg" alt="Summer x2 Osaka">
              <p>📍Kansai International Airport</p>
              <span>공항 열차타고 라피트 타러 가는 길이다. </span>
              </li>
@@ -65,7 +65,7 @@
         <div class="img4">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-6.jpeg" alt="Summer x2 Osaka">
+            <img src="img-6.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -73,7 +73,7 @@
         <div class="img5">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-7.jpeg" alt="Summer x2 Osaka">
+            <img src="img-7.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -81,7 +81,7 @@
         <div class="img6">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-8.jpeg" alt="Summer x2 Osaka">
+            <img src="img-8.jpeg" alt="Summer x2 Osaka">
             <span>공항 내 편의점에서 갑자기 모찌를 사먹고는.</span>
             </li>
             </ul>
@@ -89,15 +89,15 @@
         <div class="img7">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-9.jpeg" alt="Summer x2 Osaka">
-            <span>기념품이 스퀴즈라니! 카와이이</span>
+            <img src="img-9.jpeg" alt="Summer x2 Osaka">
+            <span>기념품이 스퀴즈라니!!</span>
             </li>
             </ul>
         </div>
         <div class="img8">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-10.jpeg" alt="Summer x2 Osaka">
+            <img src="img-10.jpeg" alt="Summer x2 Osaka">
             <span>난바역으로 가는 라피트 정류장 도착</span>
             </li>
             </ul>
@@ -105,7 +105,7 @@
         <div class="img9">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-11.jpeg" alt="Summer x2 Osaka">
+            <img src="img-11.jpeg" alt="Summer x2 Osaka">
             <span>그리고 편의점 3대장 간식</span>
             </li>
             </ul>
