--- a/osaka.html
+++ b/osaka.html
@@ -6,6 +6,8 @@
     
     <!-- style -->
     <link rel="stylesheet" href="osaka.style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@100&family=Noto+Sans+Display&family=Noto+Sans+KR:wght@100&family=Noto+Serif+Georgian&family=Poppins:wght@100&display=swap"
+          rel="stylesheet">
 </head>
     
 <body>
