--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@100&family=Noto+Sans+Display&family=Noto+Sans+KR:wght@100&family=Noto+Serif+Georgian&family=Poppins:wght@100&display=swap" 
+<link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@100&family=Noto+Sans+Display:wght@300&family=Noto+Sans+KR:wght@100&family=Noto+Serif+Georgian&family=Poppins:wght@100&display=swap" 
       rel="stylesheet">
 </head>
 
