--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@100&family=Noto+Sans+Display:wght@100;300&family=Noto+Sans+KR:wght@100&family=Noto+Serif+Georgian&family=Poppins:wght@100&display=swap" 
-      rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@100&family=Jost:ital,wght@0,400;1,200&family=Noto+Sans+KR:wght@100&family=Noto+Serif+Georgian&family=Nunito+Sans:wght@300;400&family=Poppins:wght@100&display=swap" rel="stylesheet">
 </head>
 
 <body>
