--- a/osaka.html
+++ b/osaka.html
@@ -6,7 +6,7 @@
     
     <!-- style -->
     <link rel="stylesheet" href="osaka.style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@100&family=Jost:ital,wght@0,400;1,200&family=Noto+Sans+Display&family=Noto+Sans+KR:wght@100&family=Noto+Serif+Georgian&family=Poppins:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@100&family=Jost:ital,wght@0,400;1,200&family=Noto+Sans+Display&family=Noto+Sans+KR:wght@100;300&family=Noto+Serif+Georgian&family=Poppins:wght@100&display=swap" rel="stylesheet">
 </head>
     
 <body>
