--- a/osaka.html
+++ b/osaka.html
@@ -114,7 +114,7 @@
         <div class="img10">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-12.jpeg" alt="Summer x2 Osaka">
+            <img src="img-12.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -122,7 +122,7 @@
         <div class="img11">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-13.jpeg" alt="Summer x2 Osaka">
+            <img src="img-13.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -130,7 +130,7 @@
         <div class="img12">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-14.jpeg" alt="Summer x2 Osaka">
+            <img src="img-14.jpeg" alt="Summer x2 Osaka">
             <span>조금 기다려 드디어 탄 라피트, 줄줄이 나있는 동그란 창문들은 놓칠 수 없어 </span>
             </li>
             </ul>
@@ -138,7 +138,7 @@
         <div class="img13">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-15.jpeg" alt="Summer x2 Osaka">
+            <img src="img-15.jpeg" alt="Summer x2 Osaka">
             <span>여름 중에서도 가장 여름 날씨다.</span>
             </li>
             </ul>
@@ -146,7 +146,7 @@
         <div class="img14">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-16.jpeg" alt="Summer x2 Osaka">
+            <img src="img-16.jpeg" alt="Summer x2 Osaka">
             <span>미니 레시또- 는 모으지 않고 못배긴다.</span>
             </li>
             </ul>
@@ -154,7 +154,7 @@
         <div class="img15">
             <ul class="clearfix">
              <li>
-             <img src="images/osaka/img-17.jpeg" alt="Summer x2 Osaka">
+             <img src="img-17.jpeg" alt="Summer x2 Osaka">
              <p>📍Nanba Station</p>
              <span>난바 도착. 이제 나간다!</span>
              </li>
@@ -163,7 +163,7 @@
         <div class="img16">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-18.jpeg" alt="Summer x2 Osaka">
+            <img src="img-18.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -171,7 +171,7 @@
         <div class="img17">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-19.jpeg" alt="Summer x2 Osaka">
+            <img src="img-19.jpeg" alt="Summer x2 Osaka">
             <span>역사에 야채가게라니</span>
             </li>
             </ul>
@@ -179,7 +179,7 @@
         <div class="img18">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-20.jpeg" alt="Summer x2 Osaka">
+            <img src="img-20.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -187,7 +187,7 @@
         <div class="img19">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-21.jpeg" alt="Summer x2 Osaka">
+            <img src="img-21.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -195,7 +195,7 @@
         <div class="img20">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-22.jpeg" alt="Summer x2 Osaka">
+            <img src="img-22.jpeg" alt="Summer x2 Osaka">
             <span>편의점은 먹고싶은게 너무 많다</span>
             </li>
             </ul>
@@ -203,7 +203,7 @@
         <div class="img21">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-23.jpeg" alt="Summer x2 Osaka">
+            <img src="img-23.jpeg" alt="Summer x2 Osaka">
             <span>"눈 돌아간다"는 딱 이럴 때</span>
             </li>
             </ul>
@@ -211,7 +211,7 @@
         <div class="img22">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-24.jpeg" alt="Summer x2 Osaka">
+            <img src="img-24.jpeg" alt="Summer x2 Osaka">
             <span>이맘 때 오사카는 무려 폭염이였지만</span>
             </li>
             </ul>
@@ -219,7 +219,7 @@
         <div class="img23">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-25.jpeg" alt="Summer x2 Osaka">
+            <img src="img-25.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -227,7 +227,7 @@
         <div class="img24">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-26.jpeg" alt="Summer x2 Osaka">
+            <img src="img-26.jpeg" alt="Summer x2 Osaka">
             <span>거리마다 끝없이 높던 하늘과</span>
             </li>
             </ul>
@@ -235,7 +235,7 @@
         <div class="img25">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-27.jpeg" alt="Summer x2 Osaka">
+            <img src="img-27.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -243,7 +243,7 @@
         <div class="img26">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-28.jpeg" alt="Summer x2 Osaka">
+            <img src="img-28.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -251,7 +251,7 @@
         <div class="img27">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-29.jpeg" alt="Summer x2 Osaka">
+            <img src="img-29.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -259,7 +259,7 @@
         <div class="img28">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-30.jpeg" alt="Summer x2 Osaka">
+            <img src="img-30.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -267,7 +267,7 @@
         <div class="img29">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-31.jpeg" alt="Summer x2 Osaka">
+            <img src="img-31.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -275,7 +275,7 @@
         <div class="img30">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-32.jpeg" alt="Summer x2 Osaka">
+            <img src="img-32.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -283,7 +283,7 @@
         <div class="img31">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-33.jpeg" alt="Summer x2 Osaka">
+            <img src="img-33.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -291,7 +291,7 @@
         <div class="img32">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-34.jpeg" alt="Summer x2 Osaka">
+            <img src="img-34.jpeg" alt="Summer x2 Osaka">
             <span>쨍한 햇볕 풍경은 폭염을 잊게해. .</span>
             </li>
             </ul>
@@ -299,7 +299,7 @@
         <div class="img33">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-35.jpeg" alt="Summer x2 Osaka">
+            <img src="img-35.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -307,7 +307,7 @@
         <div class="img34">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-36.jpeg" alt="Summer x2 Osaka">
+            <img src="img-36.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -315,7 +315,7 @@
         <div class="img35">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-37.jpeg" alt="Summer x2 Osaka">
+            <img src="img-37.jpeg" alt="Summer x2 Osaka">
             <span> 라-멘</span>
             </li>
             </ul>
@@ -323,7 +323,7 @@
         <div class="img36">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-38.jpeg" alt="Summer x2 Osaka">
+            <img src="img-38.jpeg" alt="Summer x2 Osaka">
             <span> 낡은 건물과 신식 건물이 공존하지만 왠지 낡은 간판들에 더 눈이 간다</span>
             </li>
             </ul>
@@ -331,7 +331,7 @@
         <div class="img37">
             <ul class="clearfix">
              <li>
-             <img src="images/osaka/img-39.jpeg" alt="Summer x2 Osaka">
+             <img src="img-39.jpeg" alt="Summer x2 Osaka">
              <p>📍Sobayosi</p>
              <span>첫 끼는 로컬, 관광객에 모두에게 맛집인 100년 전통 소바전문점. </span>
              </li>
@@ -340,7 +340,7 @@
         <div class="img38">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-40.jpeg" alt="Summer x2 Osaka">
+            <img src="img-40.jpeg" alt="Summer x2 Osaka">
             <span>장어덮밥도 유명하지만, 가장 맛있던건 저 새우덴뿌라다. 다음엔 꼭 튀김정식을 먹어야지</span>
             </li>
             </ul>
@@ -348,7 +348,7 @@
         <div class="img39">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-41.jpeg" alt="Summer x2 Osaka">
+            <img src="img-41.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -356,7 +356,7 @@
         <div class="img40">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-42.jpeg" alt="Summer x2 Osaka">
+            <img src="img-42.jpeg" alt="Summer x2 Osaka">
             <span>사자 머리의 야사카 신사.</span>
             </li>
             </ul>
@@ -364,7 +364,7 @@
         <div class="img41">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-43.jpeg" alt="Summer x2 Osaka">
+            <img src="img-43.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -372,7 +372,7 @@
         <div class="img42">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-44.jpeg" alt="Summer x2 Osaka">
+            <img src="img-44.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -380,7 +380,7 @@
         <div class="img43">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-45.jpeg" alt="Summer x2 Osaka">
+            <img src="img-45.jpeg" alt="Summer x2 Osaka">
             <span>거리에 서너개씩 꼭 있는 자판기가 무더위에는 진짜 오아시스가 따로 없다</span>
             </li>
             </ul>
@@ -388,7 +388,7 @@
         <div class="img44">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-46.jpeg" alt="Summer x2 Osaka">
+            <img src="img-46.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -396,7 +396,7 @@
         <div class="img45">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-47.jpeg" alt="Summer x2 Osaka">
+            <img src="img-47.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -404,7 +404,7 @@
         <div class="img46">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-48.jpeg" alt="Summer x2 Osaka">
+            <img src="img-48.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -412,7 +412,7 @@
         <div class="img47">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-49.jpeg" alt="Summer x2 Osaka">
+            <img src="img-49.jpeg" alt="Summer x2 Osaka">
             <span>키미노 나마에와. . . 영화 그자체</span>
             </li>
             </ul>
@@ -420,7 +420,7 @@
         <div class="img48">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-50.jpeg" alt="Summer x2 Osaka">
+            <img src="img-50.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -428,7 +428,7 @@
         <div class="img49">
             <ul class="clearfix">
             <li>
-            <img src="images/osaka/img-51.jpeg" alt="Summer x2 Osaka">
+            <img src="img-51.jpeg" alt="Summer x2 Osaka">
             <span>마리오 와루도-</span>
             </li>
             </ul>
