--- a/2019 tokyo.html
+++ b/2019 tokyo.html
@@ -20,7 +20,7 @@
         </div>
         
         <div class="header2">
-            <a href="osaka2.html" onfocus="this.blur()">
+            <a href=" " onfocus="this.blur()">
             <h1> </h1>
                 <style type="text/css"> 
                 a img{border:none;}
