--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <div class="imgli6">
                    <ul class="clearfix">
                         <li>
-                        <a href="#" target="_blank" onfocus="this.blur()">
+                        <a href="london.html" target="_blank" onfocus="this.blur()">
                         <img src="what.png" alt="???">
                         <span>Christmas in London</span>
                         </a>
